--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -2,11 +2,11 @@
 compileSdk = "35"
 targetSdk = "35"
 minSdk = "21"
-xiaojinzi_android_support = "v1.0-beta224"
-xiaojinzi_android_module = "v1.0-beta50"
-# xiaojinzi_android_module = "1a1a77bb69"
-# xiaojinzi_android_reactive = "v1.0.0-rc1"
-xiaojinzi_android_reactive = "v1.0.1"
+xiaojinzi-android-support = "1.0-beta225"
+xiaojinzi-android-module = "1.0-beta51"
+# xiaojinzi-android-module = "1a1a77bb69"
+# xiaojinzi-android-reactive = "v1.0.0-rc1"
+xiaojinzi-android-reactive = "v1.0.1"
 compose = "1.7.5"
 lifecycle = "2.8.7"
 lottie = "6.6.0"
@@ -23,50 +23,53 @@ retrofit = "2.11.0"
 room = "2.6.1"
 hilt = "2.51.1"
 glance = "1.1.1"
-work_manager = "2.10.0"
+work-manager = "2.10.0"
 koin = "4.0.0"
 
 [libraries]
-kotlin_parcelize_runtime = { group = "org.jetbrains.kotlin", name = "kotlin-parcelize-runtime", version.ref = "kotlin" }
-androidx_annotation = { group = "androidx.annotation", name = "annotation", version = "1.9.1" }
-androidx_core = { group = "androidx.core", name = "core-ktx", version = "1.15.0" }
-androidx_appcompat = { group = "androidx.appcompat", name = "appcompat", version = "1.7.0" }
-androidx_work_manager_ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work_manager" }
-xiaojinzi_android_support_ktx = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-ktx", version.ref = "xiaojinzi_android_support" }
-xiaojinzi_android_support_ktx_retrofit = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-ktx-retrofit", version.ref = "xiaojinzi_android_support" }
-xiaojinzi_android_support_bean = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-bean", version.ref = "xiaojinzi_android_support" }
-xiaojinzi_android_support_annotation = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-annotation", version.ref = "xiaojinzi_android_support" }
-xiaojinzi_android_support_activitystack = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-activity-stack", version.ref = "xiaojinzi_android_support" }
-xiaojinzi_android_support_init = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-init", version.ref = "xiaojinzi_android_support" }
-xiaojinzi_android_support_compose = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-compose", version.ref = "xiaojinzi_android_support" }
-xiaojinzi_android_module_storage = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-storage", version.ref = "xiaojinzi_android_module" }
-xiaojinzi_android_module_ffmpeg = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-ffmpeg", version.ref = "xiaojinzi_android_module" }
-xiaojinzi_android_module_ali_oss = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-ali-oss", version.ref = "xiaojinzi_android_module" }
-xiaojinzi_android_module_ali_pay = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-ali-pay", version.ref = "xiaojinzi_android_module" }
-xiaojinzi_android_module_wx_sdk = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-wx-sdk", version.ref = "xiaojinzi_android_module" }
-xiaojinzi_android_reactive_core = { group = "com.github.xiaojinzi123.AndroidReactive", name = "reactive-core", version.ref = "xiaojinzi_android_reactive" }
-xiaojinzi_android_reactive_template = { group = "com.github.xiaojinzi123.AndroidReactive", name = "reactive-template", version.ref = "xiaojinzi_android_reactive" }
-xiaojinzi_android_reactive_template_compose = { group = "com.github.xiaojinzi123.AndroidReactive", name = "reactive-template-compose", version.ref = "xiaojinzi_android_reactive" }
-compose_runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "compose" }
-compose_runtime_android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "compose" }
-compose_ui_android = { group = "androidx.compose.ui", name = "ui-android", version.ref = "compose" }
-compose_foundation_android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "compose" }
-compose_foundation_layout_android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "compose" }
-compose_material_android = { group = "androidx.compose.material", name = "material-android", version.ref = "compose" }
-compose_material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.1" }
-glance_appwidget = { group = "androidx.glance", name = "glance-appwidget", version.ref = "glance" }
-glance_material3 = { group = "androidx.glance", name = "glance-material3", version.ref = "glance" }
-room_runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
-room_ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
-room_compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
-lifecycle_viewmodel_compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
-lottie_compose = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottie" }
-kcomponent_core = { group = "com.github.xiaojinzi123.KComponent", name = "kcomponent", version.ref = "kcomponent" }
-kcomponent_compiler = { group = "com.github.xiaojinzi123.KComponent", name = "kcomponent-compiler", version.ref = "kcomponent" }
-kcomponent_gradleplugin = { group = "com.github.xiaojinzi123.KComponent", name = "kcomponent-plugin", version.ref = "kcomponent" }
+kotlin-parcelize-runtime = { group = "org.jetbrains.kotlin", name = "kotlin-parcelize-runtime", version.ref = "kotlin" }
+androidx-annotation = { group = "androidx.annotation", name = "annotation", version = "1.9.1" }
+androidx-core = { group = "androidx.core", name = "core-ktx", version = "1.15.0" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version = "1.7.0" }
+androidx-work-manager-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work-manager" }
+
+xiaojinzi-android-support-ktx = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-ktx", version.ref = "xiaojinzi-android-support" }
+xiaojinzi-android-support-ktx-retrofit = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-ktx-retrofit", version.ref = "xiaojinzi-android-support" }
+xiaojinzi-android-support-bean = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-bean", version.ref = "xiaojinzi-android-support" }
+xiaojinzi-android-support-annotation = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-annotation", version.ref = "xiaojinzi-android-support" }
+xiaojinzi-android-support-activitystack = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-activity-stack", version.ref = "xiaojinzi-android-support" }
+xiaojinzi-android-support-init = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-init", version.ref = "xiaojinzi-android-support" }
+xiaojinzi-android-support-compose = { group = "com.github.xiaojinzi123.AndroidSupport", name = "lib-compose", version.ref = "xiaojinzi-android-support" }
+
+xiaojinzi-android-module-storage = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-storage", version.ref = "xiaojinzi-android-module" }
+xiaojinzi-android-module-ffmpeg = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-ffmpeg", version.ref = "xiaojinzi-android-module" }
+xiaojinzi-android-module-ali-oss = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-ali-oss", version.ref = "xiaojinzi-android-module" }
+xiaojinzi-android-module-ali-pay = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-ali-pay", version.ref = "xiaojinzi-android-module" }
+xiaojinzi-android-module-wx-sdk = { group = "com.github.xiaojinzi123.AndroidModule", name = "module-wx-sdk", version.ref = "xiaojinzi-android-module" }
+
+xiaojinzi-android-reactive-core = { group = "com.github.xiaojinzi123.AndroidReactive", name = "reactive-core", version.ref = "xiaojinzi-android-reactive" }
+xiaojinzi-android-reactive-template = { group = "com.github.xiaojinzi123.AndroidReactive", name = "reactive-template", version.ref = "xiaojinzi-android-reactive" }
+xiaojinzi-android-reactive-template-compose = { group = "com.github.xiaojinzi123.AndroidReactive", name = "reactive-template-compose", version.ref = "xiaojinzi-android-reactive" }
+compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "compose" }
+compose-runtime-android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "compose" }
+compose-ui-android = { group = "androidx.compose.ui", name = "ui-android", version.ref = "compose" }
+compose-foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "compose" }
+compose-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "compose" }
+compose-material-android = { group = "androidx.compose.material", name = "material-android", version.ref = "compose" }
+compose-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.3.1" }
+glance-appwidget = { group = "androidx.glance", name = "glance-appwidget", version.ref = "glance" }
+glance-material3 = { group = "androidx.glance", name = "glance-material3", version.ref = "glance" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+lottie-compose = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottie" }
+kcomponent-core = { group = "com.github.xiaojinzi123.KComponent", name = "kcomponent", version.ref = "kcomponent" }
+kcomponent-compiler = { group = "com.github.xiaojinzi123.KComponent", name = "kcomponent-compiler", version.ref = "kcomponent" }
+kcomponent-gradleplugin = { group = "com.github.xiaojinzi123.KComponent", name = "kcomponent-plugin", version.ref = "kcomponent" }
 okhttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version = "4.12.0" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
-retrofit_converter_gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 
 gradle-kotlin-dsl-plugin = { group = "org.gradle.kotlin", name = "gradle-kotlin-dsl-plugins", version = "4.5.0" }
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
@@ -77,7 +80,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-hilt_compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 
